bynkc/tests/fixtures/positive/134_url_shortener/src/shortener/analytics.bynk
commons shortener.analytics {
  type ShortCode = String where MinLength(3) && MaxLength(16)
  type LongUrl = String where MinLength(1) && MaxLength(2048)

  fn ShortCode.fromString(s: String) -> Result[ShortCode, ValidationError] {
    ShortCode.of(s)
  }

  fn LongUrl.fromString(s: String) -> Result[LongUrl, ValidationError] {
    LongUrl.of(s)
  }
}
